Package: R.filesets
===================

Version: 1.5.0 [2012-11-02]
o Added ColumnNamesInterface which GenericTabularFile now implements.
  Classes inheriting from GenericTabularFile should rename any
  getColumnNames() method to getDefaultColumnNames().


Version: 1.4.2 [2012-11-01]
o Added setColumnNames() for GenericTabularFile, which utilizes
  setColumnNamesTranslator().
o CLEANUP: Deprecated (get|set)ColumnNameTranslator() in favor of
  (get|set)ColumnNamesTranslator(); note the plural form.


Version: 1.4.1 [2012-10-31]
o CLEANUP: readDataFrame() for TabularTextFile no longer returns
  attribute 'fileHeader', unless argument 'debug' is TRUE.


Version: 1.4.0 [2012-10-30]
o Added validate() to GenericDataFileSet, which iteratively calls
  validate() on all the GenericDataFile:s in the set.  The default
  is to return NA, indicating that no validation was done.


Version: 1.3.3 [2012-10-29]
o CLEANUP: Now using Arguments$getReadablePath() instead of
  filePath(..., expandLinks="any").


Version: 1.3.2 [2012-10-17]
o CLEANUP: Forgot to drop Arguments$getFilename() below.


Version: 1.3.1 [2012-10-16]
o ROBUSTNESS/BUG FIX: No longer passing '...' to NextMethod(), cf.
  R-devel thread 'Do *not* pass '...' to NextMethod() - it'll do it 
  for you; missing documentation, a bug or just me?' on Oct 16, 2012.


Version: 1.3.0 [2012-10-16]
o CLEANUP: Moved Arguments$getFilename() from this package to 
  R.utils v1.17.0.
o ROBUSTNESS: Bumped up package dependencies.


Version: 1.2.2 [2012-10-16]
o DOCUMENTATION: Added Rd help for a few more methods.
o CLEANUP: static fromFiles() for GenericDataFileSet is now defunct 
  in placefor byName(), which has been recommended since January 2010.


Version: 1.2.1 [2012-09-27]
o Now readDataFrame() for TabularTextFile defaults to read strings
  as characters rather than as factors.  To read strings as factors,
  just pass argument stringsAsFactors=TRUE.
o Added readDataFrame() for TabularTextFileSet.