@@ -66,7 +66,7 @@ setConstructorS3("GenericDataFile", function(filename=NULL, path=NULL, mustExist
   args <- list(...);
 
   # Ignore any argument called 'recursive'
-  keep <- whichVector(regexpr("^recursive$", names(args)) == -1);
+  keep <- which(regexpr("^recursive$", names(args)) == -1);
   args <- args[keep];
 
   if (length(args) > 0) {
